# sisense2ts

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.claude/skills/sisense-to-thoughtspot/: SKILL.md
.claude/skills/sisense-to-thoughtspot/fixtures/: README.md
.claude/skills/sisense-to-thoughtspot/refs/: chart-types.md  jaql-mapping.md  sisense-formula-translation.md  tml-gotchas.md
pm/: B1_brief.md  C1_brief.md  PLAN.md  clickup_push.py  clickup_task.py  clickup_tasks.csv  create_github_issues.sh  tasks.csv
samples/: sample_ecommerce_source.json
scripts/: gen_healthcare_sql.py  land_demo.py  verify_parity.py  visual_qa.py
sisense2ts/: __init__.py  cli.py
sisense2ts/extract/: parse.py  sisense_client.py  sisense_types.py
sisense2ts/ir/: __init__.py  models.py
sisense2ts/load/: ts_client.py
sisense2ts/map/: content.py  formula.py  model.py
sisense2ts/report/: coverage.py
sisense2ts/verify/: __init__.py  parity.py  visual.py
sql/: databricks_sample_ecommerce.sql  databricks_sample_healthcare.sql  run_sql.py
tests/: conftest.py  test_content.py  test_fixtures.py  test_formula.py  test_ir.py  test_model.py  test_parity.py  test_parse.py  test_report.py  test_visual.py
tests/fixtures/: dashboard_rich.json  dashboard_sample.json  datamodel_sample.json
